# CleverLeaf_ref

./: .gitignore  CMakeLists.txt  Clamour.cpp  Clamour.h  Cleverleaf.C  Cleverleaf.h  Doxyfile  LagrangianEulerianIntegrator.C  LagrangianEulerianIntegrator.h  LagrangianEulerianPatchStrategy.C  LagrangianEulerianPatchStrategy.h  LagranianEulerianIntegrator.h  Make.inc  Makefile  README.md  index.html  main.C  params.json  test.input
src/: CMakeLists.txt  CartesianCellDoubleMassWeightedAverage.C  CartesianCellDoubleMassWeightedAverage.h  CartesianCellDoubleVolumeWeightedAverage.C  CartesianCellDoubleVolumeWeightedAverage.h  CartesianCellIntConstantCoarsen.C  CartesianCellIntConstantCoarsen.h  Cleverleaf.C  Cleverleaf.h  LagrangianEulerianIntegrator.C  LagrangianEulerianIntegrator.h  LagrangianEulerianLevelIntegrator.C  LagrangianEulerianLevelIntegrator.h  LagrangianEulerianPatchStrategy.C  LagrangianEulerianPatchStrategy.h  macros.h  main.C
src/fortran/: PdV_kernel.f90  accelerate_kernel.f90  advec_cell_kernel.f90  advec_mom_kernel.f90  calc_dt_kernel.f90  cartesian_cell_constant_coarsen.f90  cartesian_cell_mass_weighted_coarsen.f90  cartesian_cell_volume_weighted_coarsen.f90  cartesian_side_double_first_order_refine.f90  debug_kernel.f90  diff_kernels.sh  field_summary_kernel.f90  flux_calc_kernel.f90  generate_chunk_kernel.f90  ideal_gas_kernel.f90  initialise_chunk_kernel.f90  tag.f90  update_halo_kernel.f90  viscosity_kernel.f90
src/geom/: CMakeLists.txt  CartesianCellDoubleMassWeightedAverage.C  CartesianCleverCellDoubleConservativeLinearRefine.C  CartesianCleverCellDoubleConservativeLinearRefine.h  CartesianCleverCellDoubleMassWeightedAverage.C  CartesianCleverCellDoubleMassWeightedAverage.h  CartesianCleverCellDoubleVolumeWeightedAverage.C  CartesianCleverCellDoubleVolumeWeightedAverage.h  CartesianCleverCellIntConstantCoarsen.C  CartesianCleverCellIntConstantCoarsen.h  CartesianCleverNodeDoubleLinearRefine.C  CartesianCleverNodeDoubleLinearRefine.h  CartesianCleverSideDoubleFirstOrderRefine.C  CartesianCleverSideDoubleFirstOrderRefine.h  CartesianSideDoubleFirstOrderRefine.C  CartesianSideDoubleFirstOrderRefine.h
src/geom/fortran/: cartesian_cell_constant_coarsen.f90  cartesian_cell_mass_weighted_coarsen.f90  cartesian_cell_volume_weighted_coarsen.f90  (+3 more)
src/hydro/: CMakeLists.txt  Cleverleaf.C  Cleverleaf.h  LagrangianEulerianIntegrator.C  LagrangianEulerianIntegrator.h  LagrangianEulerianLevelIntegrator.C  LagrangianEulerianLevelIntegrator.h  LagrangianEulerianPatchStrategy.C  LagrangianEulerianPatchStrategy.h
src/hydro/fortran/: tag.f90  (+13 more)
src/pdat/: AlignedArrayData.C  AlignedArrayData.h  AlignedArrayDataOperationUtilities.C  AlignedArrayDataOperationUtilities.h  CMakeLists.txt  CleverCellData.C  CleverCellData.h  CleverCellDataFactory.C  CleverCellDataFactory.h  CleverCellVariable.C  CleverCellVariable.h  CleverNodeData.C  CleverNodeData.h  CleverNodeDataFactory.C  CleverNodeDataFactory.h  CleverNodeInjection.C  CleverNodeInjection.h  CleverNodeVariable.C  CleverNodeVariable.h  CleverSideData.C  CleverSideData.h  CleverSideDataFactory.C  CleverSideDataFactory.h  CleverSideVariable.C  CleverSideVariable.h
(+336 files in other folders)
