add_library(pdat
  AlignedArrayData.C
  AlignedArrayDataOperationUtilities.C
  CleverCellData.C
  CleverCellDataFactory.C
  CleverCellVariable.C
  CleverNodeData.C
  CleverNodeDataFactory.C
  CleverNodeInjection.C
  CleverNodeVariable.C
  CleverSideData.C
  CleverSideDataFactory.C
  CleverSideVariable.C
  fortran/concoarsen2d.f90)

